[gd_scene load_steps=6 format=3 uid="uid://c4yumdc3ig2i6"]

[ext_resource type="Script" path="res://scripts/item_spawner.gd" id="1_5v503"]

[sub_resource type="SphereShape3D" id="SphereShape3D_s2vr5"]

[sub_resource type="Animation" id="Animation_q7p8m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xlwcl"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5urbc"]
_data = {
"RESET": SubResource("Animation_q7p8m"),
"idle": SubResource("Animation_xlwcl")
}

[node name="ItemSpawner" type="Area3D"]
script = ExtResource("1_5v503")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_s2vr5")

[node name="Light" type="OmniLight3D" parent="."]
visible = false
omni_range = 2.0

[node name="Item" type="Node3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5urbc")
}
autoplay = "idle"

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
